--- a/boardgame.html
+++ b/boardgame.html
@@ -140,6 +140,26 @@
         <p class="card-text"><p>Zwei Figuren aus den Stoffi-Chroniken.</p>
 </p>            </div>
 </div>            </div>
+                        <div class="col-auto mb-4">
+                <div class="card ">
+    <div class="card-title text-center">
+        <h3 class="mt-4 dancing-script">
+                            Säckchen für Pictures
+                    </h3>
+    </div>
+
+            <img
+                class="d-block mx-auto mb-4 pop"
+                src="img_256/boardgame/pictures.jpg"
+                width="256"
+                data-name="Säckchen für Pictures"
+                alt="Säckchen für Pictures"
+        />
+    
+    <div class="card-body">
+        <p class="card-text"><p>Praktische Säckchen zum Verstauen der Pictures Materialien.</p>
+</p>            </div>
+</div>            </div>
                     </div>
 
         <div class="mt-4">
