--- a/gemuetliches_zuhause.html
+++ b/gemuetliches_zuhause.html
@@ -330,6 +330,52 @@
         <p class="card-text"><p>Da macht Wein trinken gleicht doppelt Spaß.</p>
 </p>            </div>
 </div>            </div>
+                        <div class="col-auto mb-4">
+                <div class="card ">
+    <div class="card-title text-center">
+        <h3 class="mt-4 dancing-script">
+                            Foxtail Teppich
+                    </h3>
+    </div>
+
+        <div class="text-center">
+        <div id="carousel11" class="carousel slide" data-bs-interval="false">
+            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                    <img
+                            class="d-block mx-auto mb-4 pop"
+                            src="img_256/zuhause/foxtail_teppich.jpg"
+                            width="256"
+                            data-name="Foxtail Teppich"
+                            alt="Foxtail Teppich - Bild 1"
+                    />
+                </div>
+                                <div class="carousel-item">
+                    <img
+                            class="d-block mx-auto mb-4 pop"
+                            src="img_256/zuhause/foxtail_teppich2.jpg"
+                            width="256"
+                            data-name="Foxtail Teppich"
+                            alt="Foxtail Teppich - Bild 2"
+                    />
+                </div>
+                            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carousel11" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carousel11" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </div>
+
+    
+    <div class="card-body">
+        <p class="card-text"><p>Dieser Teppich ziert seit neustem unser Kamineck.</p>
+</p>            </div>
+</div>            </div>
                     </div>
 
         <div class="mt-4">
