Increased modal size

--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
 
 <body>
     <script src="bootstrap.min.js"></script>
-
-<div class="container">
-    
+    <div class="container">
     <h1 id="shop" class="my-4 dancing-script">Tinas Häkelarbeiten Shop</h1>
     <p>
         Schön, dass du auf meine Seite gefunden hast. Hier im Shop habe ich einige Sachen, die ich gerne zum Verkauf anbieten möchte.
@@ -618,7 +616,7 @@ Der Preis bezieht sich auf einen Kaktus.</p>        <p class="card-text text-mut
     </div>
 
     <div class="modal fade" id="imageModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-body">
                 <div class="row mb-4">
