--- a/tierchen.html
+++ b/tierchen.html
@@ -15,9 +15,8 @@
 </head>
 
 <body>
-        <script src="bootstrap.min.js"></script>
-
-    <div class="container">
+    <script src="bootstrap.min.js"></script>
+        <div class="container">
         <div class="mt-4">
             <a href="index.html#arbeiten" class="btn btn-secondary btn-lg active" role="button" aria-pressed="true">Zurück</a>
         </div>
@@ -957,7 +956,7 @@
     </div>
 
     <div class="modal fade" id="imageModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog">
+    <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-body">
                 <div class="row mb-4">
