--- a/nerds.html
+++ b/nerds.html
@@ -333,7 +333,7 @@
         <h2 class="my-4 dancing-script">Kontakt</h2>
         <div>
             <div>Tina Jung</div>
-            <div>+49 6306 3330915</div>
+            <div>+49 6306 99 99 781</div>
             <div>tina.mona.jung+tt@gmail.com</div>
             <div>Am Nabenberg 16, 67705 Trippstadt</div>
             <div><a href="https://www.instagram.com/tinas_tierchen" target="_blank">www.instagram.com/tinas_tierchen</a></div>
