--- a/makramee.html
+++ b/makramee.html
@@ -167,5 +167,10 @@
             openModal();
         });
     });
-</script></body>
+</script>
+    <script type="application/javascript">
+        const colorMode = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+        document.querySelector('html').setAttribute('data-bs-theme', colorMode);
+    </script>
+</body>
 </html>
