Minor style improvements.

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ Der Preis bezieht sich auf einen Kaktus.</p>        <p class="card-text text-mut
     </p>
 </div>
 
-    <div class="container">
+    <div class="container my-4">
         <h2 class="my-4 dancing-script">Kontakt</h2>
         <div>
             <div>Tina Jung</div>
