--- a/nuetzliche_helfer.html
+++ b/nuetzliche_helfer.html
@@ -178,7 +178,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container my-4">
         <h2 class="my-4 dancing-script">Kontakt</h2>
         <div>
             <div>Tina Jung</div>
