--- a/pflanzen.html
+++ b/pflanzen.html
@@ -274,7 +274,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container my-4">
         <h2 class="my-4 dancing-script">Kontakt</h2>
         <div>
             <div>Tina Jung</div>
