--- a/makramee.html
+++ b/makramee.html
@@ -114,7 +114,7 @@
             <div>+49 6306 99 99 781</div>
             <div>tina.mona.jung+tt@gmail.com</div>
             <div>Am Nabenberg 16, 67705 Trippstadt</div>
-            <div><a href="https://www.instagram.com/tinas_tierchen" target="_blank">www.instagram.com/tinas_tierchen</a></div>
+            <div><a href="https://www.instagram.com/tinas_kreativ_universum/" target="_blank">www.instagram.com/tinas_kreativ_universum/</a></div>
         </div>
     </div>
 
