--- a/boardgame.html
+++ b/boardgame.html
@@ -159,12 +159,12 @@
         </div>
     </div>
 
-    <div class="container my-4">
+    <div id="kontakt" class="container my-4">
         <h2 class="my-4 dancing-script">Kontakt</h2>
         <div>
             <div>Tina Jung</div>
             <div>+49 6306 99 99 781</div>
-            <div>tina.mona.jung+tt@gmail.com</div>
+            <div><a href="mailto:tina.mona.jung+tt@gmail.com" target="_blank">tina.mona.jung+tt@gmail.com</a></div>
             <div>Am Nabenberg 16, 67705 Trippstadt</div>
             <div><a href="https://www.instagram.com/tinas_kreativ_universum/" target="_blank">www.instagram.com/tinas_kreativ_universum/</a></div>
         </div>
