Added Etsy link

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <h1 id="shop" class="my-4 dancing-script">Tinas Häkelarbeiten</h1>
 
     <div class="my-4">
-        <a href="shop.html" class="btn btn-secondary btn-lg active d-inline" role="button" aria-pressed="true">Shop</a>
-        <a href="#kontakt" class="btn btn-secondary btn-lg active d-inline mx-3" role="button" aria-pressed="true">Kontakt</a>
+                <a href="#kontakt" class="btn btn-secondary btn-lg active d-inline" role="button" aria-pressed="true">Kontakt</a>
+        <a href="https://www.etsy.com/de/shop/TinasUniversum" class="btn btn-secondary btn-lg active d-inline mx-3" role="button" aria-pressed="true" target="_blank">Etsy Shop</a>
     </div>
 
     <p>
@@ -236,7 +236,7 @@
             <div>+49 6306 99 99 781</div>
             <div><a href="mailto:tina.mona.jung+tt@gmail.com" target="_blank">tina.mona.jung+tt@gmail.com</a></div>
             <div>Am Nabenberg 16, 67705 Trippstadt</div>
-            <div><a href="https://www.instagram.com/tinas_kreativ_universum/" target="_blank">www.instagram.com/tinas_kreativ_universum/</a></div>
+            <div><a href="https://www.instagram.com/tinas_tierchen" target="_blank">www.instagram.com/tinas_tierchen</a></div>
         </div>
     </div>
 
