Updated instagrm URL

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
             <div>+49 6306 99 99 781</div>
             <div><a href="mailto:tina.mona.jung+tt@gmail.com" target="_blank">tina.mona.jung+tt@gmail.com</a></div>
             <div>Am Nabenberg 16, 67705 Trippstadt</div>
-            <div><a href="https://www.instagram.com/tinas_tierchen" target="_blank">www.instagram.com/tinas_tierchen</a></div>
+            <div><a href="https://www.instagram.com/tinas_kreativ_universum" target="_blank">www.instagram.com/tinas_kreativ_universum</a></div>
         </div>
     </div>
 
