--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="my-4">
                 <a href="#kontakt" class="btn btn-secondary btn-lg active d-inline" role="button" aria-pressed="true">Kontakt</a>
-        <a href="https://www.etsy.com/de/shop/TinasUniversum" class="btn btn-secondary btn-lg active d-inline mx-3" role="button" aria-pressed="true" target="_blank">Etsy Shop</a>
+        <a href="https://tinasuniversum.etsy.com" class="btn btn-secondary btn-lg active d-inline mx-3" role="button" aria-pressed="true" target="_blank">Etsy Shop</a>
     </div>
 
     <p>
@@ -236,6 +236,7 @@
             <div>+49 6306 99 99 781</div>
             <div><a href="mailto:tina.mona.jung+tt@gmail.com" target="_blank">tina.mona.jung+tt@gmail.com</a></div>
             <div>Am Nabenberg 16, 67705 Trippstadt</div>
+            <div><a href="https://tinasuniversum.etsy.com" target="_blank">tinasuniversum.etsy.com</a></div>
             <div><a href="https://www.instagram.com/tinas_kreativ_universum" target="_blank">www.instagram.com/tinas_kreativ_universum</a></div>
         </div>
     </div>
