--- a/klamotten.html
+++ b/klamotten.html
@@ -691,6 +691,7 @@
             <div>+49 6306 99 99 781</div>
             <div><a href="mailto:tina.mona.jung+tt@gmail.com" target="_blank">tina.mona.jung+tt@gmail.com</a></div>
             <div>Am Nabenberg 16, 67705 Trippstadt</div>
+            <div><a href="https://tinasuniversum.etsy.com" target="_blank">tinasuniversum.etsy.com</a></div>
             <div><a href="https://www.instagram.com/tinas_kreativ_universum" target="_blank">www.instagram.com/tinas_kreativ_universum</a></div>
         </div>
     </div>
